--- a/notebooks/titanic_analysis.ipynb
+++ b/notebooks/titanic_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "id": "097fa95b",
    "metadata": {},
    "outputs": [],
@@ -16,8 +16,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "694b4818",
+   "metadata": {},
+   "source": [
+    "## Load the Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "id": "238e8705",
    "metadata": {},
    "outputs": [
@@ -172,7 +180,7 @@
        "4         Southampton         ?       No  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,8 +191,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "debd61fa",
+   "metadata": {},
+   "source": [
+    "## Rename Features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
+   "id": "566d57f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Rename some of the features to make data cleaning and further analysis easier\n",
+    "df.rename(columns={'Port of Embarkation': 'Port', 'Passenger Class': 'Class', 'Passenger Fare': 'Fare'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620da1b9",
+   "metadata": {},
+   "source": [
+    "## Simple Data Inspection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "71f01fe6",
    "metadata": {},
    "outputs": [
@@ -194,7 +229,7 @@
        "(1309, 13)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "id": "8c492616",
    "metadata": {},
    "outputs": [
@@ -242,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "id": "d0626b04",
    "metadata": {},
    "outputs": [
@@ -504,7 +539,7 @@
        "max                    NaN       NaN      NaN  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,8 +560,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aabee960",
+   "metadata": {},
+   "source": [
+    "## Convert Age to Numeric"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "id": "0746296d",
    "metadata": {},
    "outputs": [],
@@ -536,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "id": "c832e7af",
    "metadata": {},
    "outputs": [],
@@ -546,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "id": "3a0801fb",
    "metadata": {},
    "outputs": [
@@ -559,7 +602,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,8 +612,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0996d64",
+   "metadata": {},
+   "source": [
+    "## Loop through the categorical features and inspect the possible values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "id": "e5c8a71b",
    "metadata": {},
    "outputs": [],
@@ -581,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "id": "abf30aa7",
    "metadata": {},
    "outputs": [
@@ -782,19 +833,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 101,
-   "id": "edc111c6",
+   "cell_type": "markdown",
+   "id": "34df0949",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Rename some of the features to make data cleaning and further analysis easier\n",
-    "df.rename(columns={'Port of Embarkation': 'Port', 'Passenger Class': 'Class', 'Passenger Fare': 'Fare'}, inplace=True)"
+    "## Replace \"?\" with NAs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "id": "09e345d3",
    "metadata": {},
    "outputs": [
@@ -885,7 +933,7 @@
        "284         6      Yes  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "id": "ad34092f",
    "metadata": {},
    "outputs": [],
@@ -905,8 +953,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "194cb9ba",
+   "metadata": {},
+   "source": [
+    "## Identify Missing Values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "id": "1d6a4f9a",
    "metadata": {},
    "outputs": [
@@ -929,7 +985,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
