Data Cleaning: Mean imputation of the Age feature using gender, class, and number of siblings as group by columns

--- a/notebooks/titanic_analysis.ipynb
+++ b/notebooks/titanic_analysis.ipynb
@@ -556,7 +556,7 @@
     "Note the issues with the data :\n",
     "\n",
     "- Age is of type object\n",
-    "- Age, Cabin, Life Boat all show the most frequently occurring value to be '?' - Inspect the other features to determine if '?' is used in place of NaN and replace all.\n"
+    "- Age, Cabin, Life Boat all show the most frequently occurring value to be '?' - Inspect the other features to determine if '?' is used in place of NaN and replace all."
    ]
   },
   {
@@ -1321,35 +1321,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 180,
    "id": "716d1df6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Gender  Class  No of Siblings  No of Parents\n",
-       "Female  First  0               0                35.826087\n",
-       "                               1                36.625000\n",
-       "                               2                31.666667\n",
-       "               1               0                37.916667\n",
-       "                               1                45.333333\n",
-       "                                                  ...    \n",
-       "Male    Third  3               2                 7.000000\n",
-       "               4               1                 7.100000\n",
-       "                               2                 6.800000\n",
-       "               5               2                 8.750000\n",
-       "               8               2                14.000000\n",
-       "Name: Age, Length: 84, dtype: float64"
+       "Gender  Class \n",
+       "Female  First     36.839695\n",
+       "        Second    27.495146\n",
+       "        Third     22.177632\n",
+       "Male    First     41.026490\n",
+       "        Second    30.810127\n",
+       "        Third     25.841954\n",
+       "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(['Gender', 'Class', 'No of Siblings', 'No of Parents'])['Age'].mean()"
+    "df.groupby(['Gender', 'Class'])['Age'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "576db4d3",
+   "metadata": {},
+   "source": [
+    "## Impute Age using average age by gender, class, No of Siblings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "649191a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Age'] = df.groupby(['Gender', 'Class'])['Age'].transform(lambda x: round(x.fillna(x.mean())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "id": "7140d351",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Class             0\n",
+       "Name              0\n",
+       "Gender            0\n",
+       "Age               0\n",
+       "No of Siblings    0\n",
+       "No of Parents     0\n",
+       "Ticket Number     0\n",
+       "Fare              0\n",
+       "Port              0\n",
+       "Survived          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b910b898",
+   "metadata": {},
+   "source": [
+    "## Exploratory Data Analysis"
    ]
   }
  ],
