feat(EDA): Performed univariate analysis on the Age featureExplored central tendency, dispersion, shape, and plotted all. Confirmed that no transformations will be required, but that a new feature is_child could be beneficial

--- a/notebooks/titanic_analysis.ipynb
+++ b/notebooks/titanic_analysis.ipynb
@@ -1587,6 +1587,138 @@
     "\n",
     "The results showed a statistically significant difference, with a chi sqaure statistic of 73.58 and a p value < 0.0001, and 1 degree of freedom."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dc39ac0",
+   "metadata": {},
+   "source": [
+    "## Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fb29acc",
+   "metadata": {},
+   "source": [
+    "**Age:**\n",
+    "- Central Tendency\n",
+    "- Measure of Spread\n",
+    "- Shape\n",
+    "- Outlier Detection\n",
+    "- Recommendations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "id": "92b8a082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1306.000000\n",
+       "mean       29.307810\n",
+       "std        13.125106\n",
+       "min         0.000000\n",
+       "25%        22.000000\n",
+       "50%        26.000000\n",
+       "75%        36.000000\n",
+       "max        80.000000\n",
+       "Name: Age, dtype: float64"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "id": "e1256a9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median: 26.0\n",
+      "Mode: 26.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Median: {float(df['Age'].median())}\")\n",
+    "print(f\"Mode: {float(df['Age'].mode().iloc[0])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "29818fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skewness: 0.54\n",
+      "Kurtosis: 0.71\n"
+     ]
+    }
+   ],
+   "source": [
+    "age_skew = df['Age'].skew()\n",
+    "age_kurt = df['Age'].kurt()\n",
+    "\n",
+    "print(F\"Skewness: {round(float(age_skew),2)}\")\n",
+    "print(F\"Kurtosis: {round(float(age_kurt),2)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "id": "cc297772",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import gaussian_kde\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8,6))\n",
+    "ax.hist(x=df[\"Age\"], bins=30, edgecolor='black', color='skyblue', density=True)\n",
+    "\n",
+    "kde = gaussian_kde(df['Age'])\n",
+    "x_vals = np.linspace(min(df['Age']), max(df['Age']), 1000)\n",
+    "ax.plot(x_vals, kde(x_vals), color = 'red', linestyle = '--', labe='KDE')\n",
+    "\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
